feat: update page

--- a/data/blog.yml
+++ b/data/blog.yml
@@ -1,36 +1,19 @@
 blog:
-  - title: "The Fundamentals of DevOps Engineering"
+  - title: "Product 1"
     date: "May - 10 - 2023"
-    author: "Doge Codes"
+    author: "Doge-Codes"
     content: |
-      Introduction to DevOps Engineering: DevOps engineering is a transformative approach that has reshaped the way we develop and deliver software. In this blog post, we'll dive deep into the fundamental principles that underpin DevOps, helping you grasp the essence of this methodology. DevOps is not just a buzzword; it's a paradigm shift that combines the realms of development and operations, aiming to streamline software delivery and enhance reliability. Through this exploration, you'll gain a comprehensive understanding of how DevOps principles can reshape the software development landscape.
+      Test content 1
 
-      Key Concepts of DevOps Practices: DevOps practices are built on a solid foundation of key concepts. Continuous integration, the process of regularly integrating code changes into the main codebase, plays a pivotal role in reducing integration issues and ensuring code consistency. Continuous deployment takes this a step further by automating the deployment of code to production environments, resulting in faster and more reliable software releases. Automation, the backbone of DevOps, is the catalyst for saving time and reducing errors in the software development lifecycle. By understanding these concepts, you'll be better equipped to implement DevOps practices effectively.
-
-      Streamlining Software Development with DevOps: DevOps is more than just a set of practices; it's a philosophy that can revolutionize how software is built, tested, and delivered. By embracing DevOps, you'll discover its power in streamlining your software development process. From the initial stages of code building to rigorous testing and deployment, DevOps provides a seamless framework for collaboration between development and operations teams. Monitoring and feedback loops ensure continuous improvement, enabling you to deliver software that is not only efficient but also reliable. Throughout this blog post, you'll gain valuable insights into how DevOps can empower modern software development endeavors.
-
-  - title: "A Comprehensive Guide to Software Development Best Practices"
+  - title: "Product 2"
     date: "March - 20 - 2023"
-    author: "Doge Codes"
+    author: "Doge-Codes"
     content: |
-      Software development is a multifaceted field where the adoption of best practices is essential for success. In this comprehensive guide, we delve into the core principles and techniques that every developer should wholeheartedly embrace. Our discussion encompasses coding standards, version control, testing methodologies, and the invaluable process of code reviews.
+      Test content 2
 
-      The establishment of coding standards is pivotal in maintaining a consistent codebase, which, in turn, enhances code readability and maintainability. Embracing version control systems, such as Git, facilitates seamless collaboration among multiple developers by minimizing conflicts and streamlining project management. To ensure the reliability and overall quality of your software, an effective testing strategy is essential, covering unit, integration, and end-to-end testing.
-
-      One of the most collaborative and knowledge-enriching practices in software development is the process of code reviews. By earnestly embracing these best practices, you not only elevate the quality of your code but also enhance your development skills. This, in turn, contributes to the success of software projects, leading to more robust and efficient software solutions.
-
-      In conclusion, a thorough understanding and incorporation of these best practices into your software development endeavors will undoubtedly yield substantial benefits. From fostering a culture of consistency and collaboration through coding standards and version control to ensuring software reliability via comprehensive testing and knowledge sharing through code reviews, these principles are the cornerstone of successful software development projects. It is by embracing these practices that you can propel your coding prowess to new heights and make a significant impact in the world of software development.
-
-  - title: "Effective Operations Management Strategies"
+  - title: "Product 3"
     date: "January - 15 - 2023"
-    author: "Doge Codes"
+    author: "Doge-Codes"
     content: |
-      In today's complex technology landscape, effective operations management is paramount for ensuring the reliability and performance of your systems. In this in-depth exploration, we will delve into essential strategies for optimizing operations, providing a holistic understanding of the critical components that contribute to a well-functioning system. From real-time system monitoring and vigilant alerting to robust incident response plans and meticulous capacity planning, we will cover key aspects of operations management that are vital for achieving operational excellence.
-
-      Real-time system monitoring is the foundation upon which a proactive operations management approach is built. By continuously monitoring your systems, you can detect and address issues before they escalate into critical problems. This not only prevents potential downtime but also enhances the overall reliability and performance of your systems. Effective alerting mechanisms complement monitoring by promptly notifying you when problems arise. Swift response is key in mitigating the impact of these issues, ensuring minimal disruption to users and the business.
-
-      Incident response plans are a crucial component of operations management. These plans provide a structured approach to handling unexpected incidents, minimizing downtime, and minimizing adverse impacts on users and customers. A well-prepared incident response strategy can be the difference between a minor hiccup and a full-blown crisis, making it an indispensable part of your operations toolkit.
-
-      Capacity planning rounds out the strategies for optimizing operations. It involves assessing your system's current capabilities and ensuring that it can handle both current workloads and future growth. By carefully planning and allocating resources, you can maintain system stability, avoid costly downtime, and provide a consistently reliable experience for your users.
-
-      In conclusion, comprehensive operations management is a multifaceted discipline that encompasses real-time monitoring, alerting, incident response, and capacity planning. By implementing these strategies diligently, you not only keep your systems running smoothly but also ensure that they can adapt and scale to meet evolving demands. This proactive approach not only minimizes downtime but also enhances the overall performance and reliability of your systems, ultimately delivering a superior experience for your users and customers.
+      Test content 3
+    
