--- a/data/about.yml
+++ b/data/about.yml
@@ -2,7 +2,7 @@ about:
   title: About Doge Codes
   image: images/doge_banner.png
   paragraph: >
-    Welcome to the Doge Codes channel! I am Doge, a coding enthusiast on a mission to make learning technology fun and accessible. Join me on this exciting journey into the world of coding and development. Whether you're a beginner or an experienced developer, there's always something new to explore. Subscribe to Doge Codes for engaging tutorials, coding challenges, and valuable insights into the ever-evolving tech landscape. Let's embark on this coding adventure together! 
+    Welcome to the Doge Codes channel! I am Doge Coder, a coding enthusiast on a mission to make learning technology fun and accessible. Join me on this exciting journey into the world of coding and development. Whether you're a beginner or an experienced developer, there's always something new to explore. Subscribe to Doge Codes for engaging tutorials, coding challenges, and valuable insights into the ever-evolving tech landscape. Let's embark on this coding adventure together! 
     Join the Doge Codes Discord community [here](https://discord.gg/xEeWS8PFPm).
 
 work:
